--- a/Simulation2016/I-V/I-V.sim/sim_1/behav/xsim.ini
+++ b/Simulation2016/I-V/I-V.sim/sim_1/behav/xsim.ini
@@ -1,3 +1,6 @@
 xil_defaultlib=xsim.dir/xil_defaultlib
 xpm=xsim.dir/xpm
 blk_mem_gen_v8_3_3=xsim.dir/blk_mem_gen_v8_3_3
+xbip_utils_v3_0_6=xsim.dir/xbip_utils_v3_0_6
+axi_utils_v2_0_2=xsim.dir/axi_utils_v2_0_2
+cic_compiler_v4_0_10=xsim.dir/cic_compiler_v4_0_10
