--- a/Simulation2016/I-V/I-V.sim/sim_1/behav/xsim.ini
+++ b/Simulation2016/I-V/I-V.sim/sim_1/behav/xsim.ini
@@ -4,3 +4,8 @@ blk_mem_gen_v8_3_3=xsim.dir/blk_mem_gen_v8_3_3
 xbip_utils_v3_0_6=xsim.dir/xbip_utils_v3_0_6
 axi_utils_v2_0_2=xsim.dir/axi_utils_v2_0_2
 cic_compiler_v4_0_10=xsim.dir/cic_compiler_v4_0_10
+axis_infrastructure_v1_1_0=xsim.dir/axis_infrastructure_v1_1_0
+fifo_generator_v13_1_1=xsim.dir/fifo_generator_v13_1_1
+axis_data_fifo_v1_1_10=xsim.dir/axis_data_fifo_v1_1_10
+axis_register_slice_v1_1_9=xsim.dir/axis_register_slice_v1_1_9
+axis_dwidth_converter_v1_1_8=xsim.dir/axis_dwidth_converter_v1_1_8
