--- a/server/Makefile
+++ b/server/Makefile
@@ -1,84 +1,31 @@
-##
-# $Id: Makefile 1249 2014-02-22 20:21:40Z ales.bardorfer $
-#
-# (c) Red Pitaya  http://www.redpitaya.com
-#
-# Signal generator project file. To build executable for Signal generator run:
-# 'make all'
-#
-# This project file is written for GNU/Make software. For more details please 
-# visit: http://www.gnu.org/software/make/manual/make.html
-# GNU Compiler Collection (GCC) tools are used for the compilation and linkage. 
-# For the details about the usage and building please visit:
-# http://gcc.gnu.org/onlinedocs/gcc/
-#
+API_DIR = ../tmp/opt/redpitaya
 
-# Versioning system
-VERSION ?= 0.00-0000
-REVISION ?= devbuild
+CROSS_COMPILE=arm-linux-gnueabihf-
+CC = $(CROSS_COMPILE)gcc
+CFLAGS  = -O3 -march=armv7-a -mtune=cortex-a9 -mfpu=neon -mfloat-abi=hard -D_GNU_SOURCE
+CFLAGS += -I$(API_DIR)/include
+LDFLAGS = -L$(API_DIR)/lib
+LDLIBS = -static -lrp-hw-calib -lrp-hw-profiles -lm
 
-# List of compiled object files (not yet linked to executable)
-OBJS = rp.o
-# List of raw source files (all object files, renamed from .o to .c)
-SRCS = $(subst .o,.c, $(OBJS)))
+export CC
+export CROSS_COMPILE
 
-# Executable name
-TARGET=rp
+CUR_DIR = $(PWD)
 
-# GCC compiling & linking flags
-CFLAGS=-g -std=gnu99 -Wall -pthread
-CFLAGS += -DVERSION=$(VERSION) -DREVISION=$(REVISION)
+PRGS =  maglab_rp_info maglab_rp_server
 
-# Red Pitaya common SW directory
-SHARED=../../shared/
+OBJS := $(patsubst %,%.o,$(PRGS))
+SRC := $(patsubst %,%.c,$(PRGS))
 
-# Additional libraries which needs to be dynamically linked to the executable
-# -lm - System math library (used by cos(), sin(), sqrt(), ... functions)
-LIBS=-lm
+all: $(PRGS)
 
-# Main GCC executable (used for compiling and linking)
-CC=$(CROSS_COMPILE)gcc
-# Installation directory
-INSTALL_DIR ?= .
+$(PRGS): %: %.c
+	$(CC) $< $(CFLAGS) $(LDFLAGS) $(LDLIBS) -o $@
 
-# Makefile is composed of so called 'targets'. They give basic structure what 
-# needs to be execued during various stages of the building/removing/installing
-# of software package.
-# Simple Makefile targets have the following structure:
-# <name>: <dependencies>
-#	<command1>
-#       <command2>
-#       ...
-# The target <name> is completed in the following order:
-#   - list od <dependencies> finished
-#   - all <commands> in the body of targets are executed succsesfully
-
-# Main Makefile target 'all' - it iterates over all targets listed in $(TARGET)
-# variable.
-all: $(TARGET)
-
-# Target with compilation rules to compile object from source files.
-# It applies to all files ending with .o. During partial building only new object
-# files are created for the source files (.c) which have newer timestamp then 
-# objects (.o) files.
-%.o: %.c
-	$(CC) -c $(CFLAGS) $< -o $@
-
-# Makefile target with rules how to link executable for each target from $(TARGET)
-# list.
-$(TARGET): $(OBJS)
-	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
-
-# Clean target - when called it cleans all object files and executables.
 clean:
-	rm -f $(TARGET) *.o
+	$(RM) *.o
+	$(RM) $(OBJS)
 
-# Install target - creates 'bin/' sub-directory in $(INSTALL_DIR) and copies all
-# executables to that location.
-install:
-	mkdir -p $(INSTALL_DIR)/bin
-	cp $(TARGET) $(INSTALL_DIR)/bin
-	mkdir -p $(INSTALL_DIR)/src/utils/$(TARGET)
-	-rm -f $(TARGET) *.o
-	cp -r * $(INSTALL_DIR)/src/utils/$(TARGET)/
-	-rm `find $(INSTALL_DIR)/src/tools/$(TARGET)/ -iname .svn` -rf
+clean_all: clean
+	$(RM) $(PRGS)
+
